--- a/day1.ipynb
+++ b/day1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "day1.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -63,7 +64,6 @@
       },
       "cell_type": "code",
       "source": [
-        "!wget -q -O day1.txt \"https://docs.google.com/uc?export=download&id=1DtoZxzyb4WT7qA0e3vQbCgFYbjOpXH3Q\"\n",
         "with open(\"day1.txt\", 'r') as f:\n",
         "  inputs = list(map(int, f.read().splitlines()))\n",
         "  \n",
