--- a/day10.ipynb
+++ b/day10.ipynb
@@ -35,9 +35,10 @@
         "import numpy as np\n",
         "\n",
         "def aligned(points):\n",
-        "  \"\"\"Heuristic criterion that works in practice, we want to find a configuration of points with minimal L2 distance\n",
-        "  i.e. points should be as close as possible\"\"\"\n",
-        "  return - np.mean(np.sum(np.abs(points[None, :, :] - points[:, None, :])**2, axis=-1))\n",
+        "  \"\"\"Heuristic criterion that works well in practice,\n",
+        "     we want to find a configuration of points with minimal L2 distance\n",
+        "     i.e. points should be as close as possible\"\"\"\n",
+        "  return np.mean(np.sum(np.abs(points[None, :, :] - points[:, None, :])**2, axis=-1))\n",
         "\n",
         "def find_candidates(inputs, num_steps, first_step=0, scale=1, num_candidates=5):\n",
         "  \"\"\"We're applying the velocities to the points (rescaled by `scale`) for `num_steps`\n",
@@ -55,7 +56,7 @@
         "    scores[i] = aligned(points)\n",
         "    steps_taken[i] = int(scale) + (i > 0) * steps_taken[i - 1]\n",
         "  #  Return steps with smallest L2 distance\n",
-        "  scores = np.argsort(- scores)\n",
+        "  scores = np.argsort(scores)\n",
         "  print(' Best candidates', [steps_taken[x] + first_step for x in scores[:num_candidates]])"
       ],
       "execution_count": 0,
