Day 16: Chronal Classification

--- a/day16.ipynb
+++ b/day16.ipynb
@@ -99,14 +99,21 @@
         "  return before\n",
         "\n",
         "\"\"\"Gather all instructions\"\"\"\n",
-        "operations = [('addr', partial(apply_add, register=1)), ('addi', partial(apply_add, register=0)),\n",
-        "              ('mulr', partial(apply_mul, register=1)), ('muli', partial(apply_mul, register=0)),\n",
-        "              ('banr', partial(apply_ban, register=1)), ('bani', partial(apply_ban, register=0)),\n",
-        "              ('borr', partial(apply_bor, register=1)), ('bori', partial(apply_bor, register=0)),\n",
-        "              ('setr', partial(apply_set, register=1)), ('seti', partial(apply_set, register=0)),\n",
-        "              ('gtir', partial(apply_gt, register=0)), ('gtri', partial(apply_gt, register=1)),\n",
+        "operations = [('addr', partial(apply_add, register=1)), \n",
+        "              ('addi', partial(apply_add, register=0)),\n",
+        "              ('mulr', partial(apply_mul, register=1)), \n",
+        "              ('muli', partial(apply_mul, register=0)),\n",
+        "              ('banr', partial(apply_ban, register=1)), \n",
+        "              ('bani', partial(apply_ban, register=0)),\n",
+        "              ('borr', partial(apply_bor, register=1)),\n",
+        "              ('bori', partial(apply_bor, register=0)),\n",
+        "              ('setr', partial(apply_set, register=1)), \n",
+        "              ('seti', partial(apply_set, register=0)),\n",
+        "              ('gtir', partial(apply_gt, register=0)),\n",
+        "              ('gtri', partial(apply_gt, register=1)),\n",
         "              ('gtrr', partial(apply_gt, register=2)),\n",
-        "              ('eqir', partial(apply_eq, register=0)), ('eqri', partial(apply_eq, register=1)),\n",
+        "              ('eqir', partial(apply_eq, register=0)), \n",
+        "              ('eqri', partial(apply_eq, register=1)),\n",
         "              ('eqrr', partial(apply_eq, register=2))]"
       ],
       "execution_count": 0,
@@ -139,7 +146,8 @@
         "  return i    \n",
         "\n",
         "def get_exact_behaviour(clauses, threshold=3):\n",
-        "  \"\"\"Returns the number of samples with `threshold` or more behaviours\"\"\"\n",
+        "  \"\"\"Collect all possible instruction behaviour for each opcode and \n",
+        "     determine the final unique assignment\"\"\"\n",
         "  num_ops = len(operations)\n",
         "  \n",
         "  # Work out assignment possibilities\n",
@@ -183,11 +191,11 @@
       "metadata": {
         "id": "7NCz_xsMEmfO",
         "colab_type": "code",
+        "outputId": "ed9bdc3d-8647-4bc8-f1b0-0658163821aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
-        },
-        "outputId": "ed9bdc3d-8647-4bc8-f1b0-0658163821aa"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -198,7 +206,7 @@
         "print()\n",
         "print('Final Register after applying the input program:', apply_exact_behaviour(inputs, verbose=True))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
