Day 21: Chronal Conversion

--- a/day21.ipynb
+++ b/day21.ipynb
@@ -265,7 +265,7 @@
         "    r3 = ceil(r3 // 256)     \n",
         "```\n",
         "\n",
-        "When executing the program, we notice the values `R5` takes are cyclic, causing the program to fall into a loop. Consequently we need to set `R0`to the last value reached by `R5` in that cycle to get the longest terminating run.\n"
+        "When executing the program, we notice the values `R5` takes are cyclic, causing the program to fall into a loop. Consequently we need to set `R0`t o the last value reached by `R5` in that cycle to get the longest terminating run.\n"
       ]
     },
     {
@@ -304,6 +304,45 @@
           "output_type": "stream",
           "text": [
             "R0 value for longest terminating run: 9547924\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ExQOrWW36gWD",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Just for fun, we can check how long running this program actually takes :)"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YkgOLi3_sAhz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "f1326318-53e8-4ce0-b48c-728b23689b9b"
+      },
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "print('Setting R0 to %d, program finishes in %d instructions' % (\n",
+        "    r5_value, run_programm(inputs, init_registers=[r5_value, 0, 0, 0, 0, 0])[0]))  "
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Setting R0 to 9547924, program finishes in 2346341652 instructions\n",
+            "CPU times: user 34min 14s, sys: 226 ms, total: 34min 14s\n",
+            "Wall time: 34min 14s\n"
           ],
           "name": "stdout"
         }
