Day 23: Experimental Emergency Teleportation

--- a/day23.ipynb
+++ b/day23.ipynb
@@ -63,7 +63,6 @@
       },
       "cell_type": "code",
       "source": [
-        "!wget -q -O day23.txt \"https://docs.google.com/uc?export=download&id=10gPRjiU3LN2R6XMcCKuRbv0NEBPz2h3m\"\n",
         "with open('day23.txt', 'r') as f:\n",
         "  inputs = np.array([[- int(sub[1:]) if sub[0] == '-' else int(sub) \n",
         "                      for sub in re.split('<|,|>|=', line) if (sub.isdigit() or sub[1:].isdigit())]\n",
@@ -116,7 +115,7 @@
         "- (x - x_i) - (y - y_i) - (z - z_i) \\leq r_i + K (1 - c)\\\\\n",
         "\\end{align}\n",
         "\n",
-        "We can use the ```PulP``` library to solve this problem"
+        "We can use the [```PulP```](https://pythonhosted.org/PuLP/main/installing_pulp_at_home.html)  library to solve this problem"
       ]
     },
     {
@@ -131,7 +130,6 @@
       },
       "cell_type": "code",
       "source": [
-        "!pip -q install pulp\n",
         "import pulp\n",
         "\n",
         "def get_widest_in_range(inputs, K=10000000000):\n",
